--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Local repo to Github Repo</title>
 </head>
 <body>
+    <header>
+        This is a header section
+    </header>
     <h1>Hello world</h1>
+    <footer>
+        This is a footer section
+    </footer>
 </body>
 </html>
